Перевёрстан блок со skills в about us 1. Добавлен элемент about__skill  в блок about для позиционирования элемента. 2. Блок skill выступает в качестве служебного блока, для простоты создания элементов (в БЭМ отсутствуют элементы элементов).

--- a/index.html
+++ b/index.html
@@ -250,31 +250,31 @@
                             Skills
                         </h4>
                         <div class="about__skills">
-                            <div class="skill">
+                            <div class="about__skill skill">
                                 <span class="skill__name">PHOTOSHOP</span>
                                 <progress class="skill__bar" max="100" value="100">
                                 </progress>
                                 <span class="skill__percent">100%</span>
                             </div>
-                            <div class="skill">
+                            <div class="about__skill skill">
                                 <span class="skill__name">ILLUSTRATOR</span>
                                 <progress class="skill__bar" max="100" value="98">
                                 </progress>
                                 <span class="skill__percent">98%</span>
                             </div>
-                            <div class="skill">
+                            <div class="about__skill skill">
                                 <span class="skill__name">WORDPRESS</span>
                                 <progress class="skill__bar" max="100" value="67">
                                 </progress>
                                 <span class="skill__percent">67%</span>
                             </div>
-                            <div class="skill">
+                            <div class="about__skill skill">
                                 <span class="skill__name">JOOMLA</span>
                                 <progress class="skill__bar" max="100" value="70">
                                 </progress>
                                 <span class="skill__percent">70%</span>
                             </div>
-                            <div class="skill">
+                            <div class="about__skill skill">
                                 <span class="skill__name">JQUERY</span>
                                 <progress class="skill__bar" max="100" value="58">
                                 </progress>
