Перевёрстаны социальные ссылки 1. Добавлен элемент about__social-links в блок about для разметки блока с социальными ссылками 2. Добавлены элементы about__social-link для позиционирования ссылки 3. Заданы модификаторы about__social-link_fb для задания фона (изменение внешнего вида ссылки)

--- a/index.html
+++ b/index.html
@@ -227,21 +227,21 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="member__socials">
-                            <a class="member__socials-link" href="#">
-                                <img src="img/Facebook.png">
+                        <div class="about__social-links">
+                            <a class="about__social-link about__social-link_fb" href="#">
+                                Facebook
                             </a>
-                            <a class="member__socials-link" href="#">
-                                <img src="img/Google+.png">
+                            <a class="about__social-link about__social-link_gp" href="#">
+                                Google+
                             </a>
-                            <a class="member__socials-link" href="#">
-                                <img src="img/Vimeo.png">
+                            <a class="about__social-link about__social-link_vm" href="#">
+                                Vimeo
                             </a>
-                            <a class="member__socials-link" href="#">
-                                <img src="img/Dribbble.png">
+                            <a class="about__social-link about__social-link_dl" href="#">
+                                Dribbble
                             </a>
-                            <a class="member__socials-link" href="#">
-                                <img src="img/YouTube.png">
+                            <a class="about__social-link about__social-link_yt" href="#">
+                                Youtube
                             </a>
                         </div>
                     </article>
