Изменено названия класса в блоке "about"  с табами 1. Изменены названия классов about__tab-activation на about__tab

--- a/index.html
+++ b/index.html
@@ -143,16 +143,16 @@
         </h2>
         <div class="section__content">
             <div class="main-container about__tabs">
-                <label class="about__tab-activation" for="Elizabeth-Stevens">
+                <label class="about__tab" for="Elizabeth-Stevens">
                     <img class="about__tab-img" src="img/member1.png" alt="Elizabeth Stevens">
                 </label>
-                <label class="about__tab-activation" for="John-Smith">
+                <label class="about__tab" for="John-Smith">
                     <img class="about__tab-img" src="img/member2.png" alt="John Smith">
                 </label>
-                <label class="about__tab-activation" for="Diana-Paterns">
+                <label class="about__tab" for="Diana-Paterns">
                     <img class="about__tab-img" src="img/member3.png" alt="Diana Paterns">
                 </label>
-                <label class="about__tab-activation" for="Kate-Eastwood">
+                <label class="about__tab" for="Kate-Eastwood">
                     <img class="about__tab-img" src="img/member4.png" alt="Kate Eastwood">
                 </label>
             </div>
