Изменения в блоке about 1. Добавлено отрицательное значение для свойства text-indent для элемента about__social-link (убран горизонтальный scroll). 2. У элемента about__info убраны лишние CSS-свойства background-size и background-position. 3. Добавлена новая информация для каждого члена команды

--- a/index.html
+++ b/index.html
@@ -167,14 +167,19 @@
                             John Smith - Lead Graphic Designer
                         </h3>
                         <div class="about__description">
-                            <p lang="la">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                laborum.
+                            <p>
+                                The Future Project believes that following ones
+                                dreams is a worthy pursuit and - in partnership
+                                with some of the most visionary leaders in America
+                                - has become one of the fastest growing national
+                                education movements since Teach For America.
+                                We place Dream Directors in high schools who
+                                enable a team of student leaders to design and
+                                execute projects ranging from new business ventures
+                                to mobilizing their peers to insist on new classes.
+                                In just four years, our Dream Directors have
+                                helped more than 25,000 students put their dreams
+                                into action; now were looking.
                             </p>
                         </div>
                         <div class="about__social-links">
@@ -241,14 +246,17 @@
                             Elizabeth-Stevens - Graphic Designer
                         </h3>
                         <div class="about__description">
-                            <p lang="la">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                laborum.
+                            <p>
+                                As a creative Graphic Designer, you’ll translate
+                                our strategic marketing ideas from written or spoken
+                                directives into dynamic visual content. You should
+                                have some understanding of marketing campaigns, and
+                                the variety of materials they can require from start
+                                to finish. You’ll collaborate with our team of marketing
+                                mavericks and conquer quick deadlines on a daily basis.
+                                Duties will include working with digital and print graphics,
+                                email design, website development and maintenance, social
+                                media and more.
                             </p>
                         </div>
                         <div class="about__social-links">
@@ -276,27 +284,27 @@
                         <div class="about__skills">
                             <div class="about__skill skill">
                                 <span class="skill__name">PHOTOSHOP</span>
-                                <progress class="skill__bar" max="100" value="100">
+                                <progress class="skill__bar" max="100" value="87">
                                 </progress>
-                                <span class="skill__percent">100%</span>
+                                <span class="skill__percent">87%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">ILLUSTRATOR</span>
-                                <progress class="skill__bar" max="100" value="98">
+                                <progress class="skill__bar" max="100" value="85">
                                 </progress>
-                                <span class="skill__percent">98%</span>
+                                <span class="skill__percent">85%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">WORDPRESS</span>
-                                <progress class="skill__bar" max="100" value="67">
+                                <progress class="skill__bar" max="100" value="65">
                                 </progress>
-                                <span class="skill__percent">67%</span>
+                                <span class="skill__percent">65%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">JOOMLA</span>
-                                <progress class="skill__bar" max="100" value="70">
+                                <progress class="skill__bar" max="100" value="63">
                                 </progress>
-                                <span class="skill__percent">70%</span>
+                                <span class="skill__percent">63%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">JQUERY</span>
@@ -312,17 +320,22 @@
                 <div class="main-container about__container">
                     <article class="about__info-container">
                         <h3 class="about__info-title title">
-                            Diana-Paterns - UX Specialist
+                            Diana Paterns - UX Specialist
                         </h3>
                         <div class="about__description">
                             <p lang="la">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                laborum.
+                                Visual Designers with the User Experience team are
+                                responsible for the creative and visual aesthetic
+                                of our client projects. We are seeking strong creative
+                                thinkers that can, both as part of a team and independently,
+                                communicate their design perspective clearly and
+                                articulately to our team of UX designers, developers,
+                                and our clients. This includes the discovery or
+                                creation of brand attributes, design direction,
+                                and the application of design principles and best
+                                practices that support them. Our Visual Designers
+                                build off or work in parallel with our UX designers
+                                Research, Content Strategy, Information Architecture.
                             </p>
                         </div>
                         <div class="about__social-links">
@@ -350,33 +363,33 @@
                         <div class="about__skills">
                             <div class="about__skill skill">
                                 <span class="skill__name">PHOTOSHOP</span>
-                                <progress class="skill__bar" max="100" value="100">
+                                <progress class="skill__bar" max="100" value="56">
                                 </progress>
-                                <span class="skill__percent">100%</span>
+                                <span class="skill__percent">56%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">ILLUSTRATOR</span>
-                                <progress class="skill__bar" max="100" value="98">
+                                <progress class="skill__bar" max="100" value="50">
                                 </progress>
-                                <span class="skill__percent">98%</span>
+                                <span class="skill__percent">50%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">WORDPRESS</span>
-                                <progress class="skill__bar" max="100" value="67">
+                                <progress class="skill__bar" max="100" value="85">
                                 </progress>
-                                <span class="skill__percent">67%</span>
+                                <span class="skill__percent">85%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">JOOMLA</span>
-                                <progress class="skill__bar" max="100" value="70">
+                                <progress class="skill__bar" max="100" value="77">
                                 </progress>
-                                <span class="skill__percent">70%</span>
+                                <span class="skill__percent">77%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">JQUERY</span>
-                                <progress class="skill__bar" max="100" value="58">
+                                <progress class="skill__bar" max="100" value="84">
                                 </progress>
-                                <span class="skill__percent">58%</span>
+                                <span class="skill__percent">84%</span>
                             </div>
                         </div>
                     </article>
@@ -386,17 +399,21 @@
                 <div class="main-container about__container">
                     <article class="about__info-container">
                         <h3 class="about__info-title title">
-                            Kate-Eastwood - UI Senior Designer
+                            Kate Eastwood - UI Senior Designer
                         </h3>
                         <div class="about__description">
                             <p lang="la">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                laborum.
+                                This position is responsible for the design and
+                                production of print, web and graphic applications
+                                such as environmental graphics, retail POS,
+                                social media campaigns, emails, landing pages,
+                                online banners, collateral material, brochures,
+                                advertisements, direct mail, corporate identity,
+                                and packaging for all company brands including Bowflex
+                                Schwinn Fitness, Nautilus and more. The position provides
+                                the unique opportunity of working closely with the Creative Director
+                                and a growing design team to create a new look and feel
+                                for the Nautilus brands and products.
                             </p>
                         </div>
                         <div class="about__social-links">
@@ -424,33 +441,33 @@
                         <div class="about__skills">
                             <div class="about__skill skill">
                                 <span class="skill__name">PHOTOSHOP</span>
-                                <progress class="skill__bar" max="100" value="100">
+                                <progress class="skill__bar" max="100" value="90">
                                 </progress>
-                                <span class="skill__percent">100%</span>
+                                <span class="skill__percent">90%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">ILLUSTRATOR</span>
-                                <progress class="skill__bar" max="100" value="98">
+                                <progress class="skill__bar" max="100" value="92">
                                 </progress>
-                                <span class="skill__percent">98%</span>
+                                <span class="skill__percent">92%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">WORDPRESS</span>
-                                <progress class="skill__bar" max="100" value="67">
+                                <progress class="skill__bar" max="100" value="63">
                                 </progress>
-                                <span class="skill__percent">67%</span>
+                                <span class="skill__percent">63%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">JOOMLA</span>
-                                <progress class="skill__bar" max="100" value="70">
+                                <progress class="skill__bar" max="100" value="55">
                                 </progress>
-                                <span class="skill__percent">70%</span>
+                                <span class="skill__percent">55%</span>
                             </div>
                             <div class="about__skill skill">
                                 <span class="skill__name">JQUERY</span>
-                                <progress class="skill__bar" max="100" value="58">
+                                <progress class="skill__bar" max="100" value="60">
                                 </progress>
-                                <span class="skill__percent">58%</span>
+                                <span class="skill__percent">60%</span>
                             </div>
                         </div>
                     </article>
